--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@auth0/angular-jwt": "^5.1.2",
     "angular-tabler-icons": "^2.31.0",
     "primeicons": "^6.0.1",
     "primeng": "^16.2.0",
