--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.1.0",
     "@auth0/angular-jwt": "^5.1.2",
     "angular-tabler-icons": "^2.31.0",
+    "ngx-pagination": "^6.0.3",
     "primeicons": "^6.0.1",
     "primeng": "^16.2.0",
     "rxjs": "~7.8.0",
